form_button enabled

--- a/src/fullcalendar/templates/fullcalendar/calendar.html
+++ b/src/fullcalendar/templates/fullcalendar/calendar.html
@@ -279,7 +279,8 @@
                     },
                     error: function (xhr, ajaxOptions, thrownError) {
                         alert('hubo un error subiendo el archivo, intente luego')
-                        $('#form_button').show()
+
+                        $('#form_button').prop( "disabled", false );
                         $('#form_button_loading').hide()
 
                     }
