--- a/src/main/templates/main/workers/list.html
+++ b/src/main/templates/main/workers/list.html
@@ -12,7 +12,7 @@
             <div class="row header">
                 <h3>TRABAJADORES</h3>
                 {% if request.user.is_superuser %}
-                    <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
+                    <div class="col-md-9 col-sm-12 col-xs-12 pull-right">
                         <a href="{% url 'main:worker_new' company.slug %}" class="btn-flat success pull-right">
                             <span>&#43;</span>
                             Nuevo Trabajador
@@ -26,14 +26,14 @@
                 </div>
             {% endif %}
         <div class="row">
-            <table id="example">
+            <table id="example" class="table table-hover">
                 <thead>
                 <tr>
                     <th>Codigo</th>
                     <th tabindex="0" rowspan="1" colspan="1">Nombres</th>
                     <th tabindex="0" rowspan="1" colspan="1">Apellidos</th>
                     <th><span class="line"></span>Cargo</th>
-                    <th class="text-center"><span class="line"></span>Activo</th>
+{#                    <th class="text-center"><span class="line"></span>Activo</th>#}
                     {% if request.user.is_superuser %}
                         <th><span class="line"></span>Opciones</th>
                     {% endif %}
@@ -47,19 +47,16 @@
                         <td>{{ worker.name }}</td>
                         <td>{{ worker.last_name }}</td>
                         <td>{{ worker.get_cargo_display }}</td>
-                        {% if worker.estado %}
-                            <td class="text-center">Activo</td>
-                        {% else %}
-                            <td class="text-center">Cesado</td>
-                        {% endif %}
+{#                        {% if worker.estado %}#}
+{#                            <td class="text-center">Activo</td>#}
+{#                        {% else %}#}
+{#                            <td class="text-center">Cesado</td>#}
+{#                        {% endif %}#}
                         {% if request.user.is_superuser %}
                             <td class="text-left">
-                                <ul>
-                                    <li><a href="{% url 'main:worker_edit' company.slug worker.pk %}">Editar</a></li>
-                                    <li class="last"><a href="{% url 'main:worker_delete' company.slug worker.pk %}">Eliminar</a></li>
-                                        <li class="last"><a href="{% url 'main:worker_record' company.slug worker.pk %}">Indice Seguridad</a>
-                                    </li>
-                                </ul>
+                                <a href="{% url 'main:worker_record' company.slug worker.pk %}" title="indice de seguridad" class="btn btn-default"><i class="icon-tasks"></i></a>
+                                <a href="{% url 'main:worker_edit' company.slug worker.pk %}" title="editar" class="btn btn-default"><i class="icon-edit"></i></a>
+                                <a href="{% url 'main:worker_delete' company.slug worker.pk %}" title="eliminar" class="btn btn-default btn-confirm-delete"><i class="icon-remove"></i></a>
                             </td>
                         {% endif %}
                     </tr>
