--- a/src/main/static/main/css/compiled/layout.css
+++ b/src/main/static/main/css/compiled/layout.css
@@ -222,7 +222,9 @@ input.search {
   width: 180px;
   float: left;
   margin: 0em;
-  padding-top: 5.8em; }
+  /*padding-top: 5.8em; */
+  padding-top: 1em;
+}
   #sidebar-nav #dashboard-menu {
     list-style: none;
     padding-right: 15px;
