--- a/src/main/templates/main/accidents/accidents.html
+++ b/src/main/templates/main/accidents/accidents.html
@@ -1,7 +1,9 @@
 {% extends 'main/layout.html' %}
 {% load static %}
 {% block styles %}
-{%  endblock %}
+    <link href="{% static 'main/css/lib/select2.css' %}" type="text/css" rel="stylesheet"/>
+
+{% endblock %}
 {% block content %}
     <div id="pad-wrapper" class="new-user">
         <div class="row header">
@@ -9,30 +11,39 @@
                 <h3>ACCIDENTES, INCIDENTES, ENFERMEDAD OCUPACIONAL Y ACTO INSEGURO</h3>
             </div>
         </div>
-     {% if message %}
+        {% if message %}
             <div class="alert alert-danger alert-dismissible" role="alert">
                 <strong>Error!</strong> {{ message }} {{ response }}
             </div>
         {% endif %}
-     <div class="row form-wrapper">
-        <!-- left column -->
-        <div class="col-md-9 with-sidebar">
-            <form action="." method="post" class="form-horizontal" enctype="multipart/form-data">
-            {% csrf_token %}
-            {% for field in form %}
-            {% include 'main/hooks/field_with_label.html' with field=field %}
-            {% endfor %}
+        <div class="row form-wrapper">
+            <!-- left column -->
+            <div class="col-md-9 with-sidebar">
+                <form action="." method="post" class="form-horizontal" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {% for field in form %}
+                        {% include 'main/hooks/field_with_label.html' with field=field %}
+                    {% endfor %}
 
-             <div class="pull-right">
-                <input type="submit" class="btn btn-primary pull-right" value="{{  save_text|default:'Guardar' }}" name="_save">
+                    <div class="pull-right">
+                        <input type="submit" class="btn btn-primary pull-right"
+                               value="{{ save_text|default:'Guardar' }}" name="_save">
+                    </div>
+
+                </form>
             </div>
-
-        </form>
         </div>
-     </div>
     </div>
 
 
 {% endblock %}
 {% block scripts %}
+    <script src="{% static 'main/js/select2.min.js' %}"></script>
+    <script>
+        $(document).ready(function () {
+            $("#id_worker").select2({
+                placeholder: "Select a State"
+            });
+        })
+    </script>
 {% endblock %}
