--- a/src/main/templates/main/layout.html
+++ b/src/main/templates/main/layout.html
@@ -1,6 +1,7 @@
 {% extends 'main/layout_with_out_nav.html' %}
 {% load layout_extras %}
 {% load static %}
+
 {% block styles %}
 {% endblock %}
 {% block nav %}
@@ -13,46 +14,78 @@
 {% endblock %}
 {% block sidebar %}
     <div id="sidebar-nav">
+        <div style="text-align: center;">
+            {% if company.logo %}
+                <img src="{{ company.logo.url }}" alt="contact" class="avatar" style="max-height: 100px;"/>
+            {% else %}
+                <img src="{% static 'main/img/logo_proteccion.png' %}" alt="contact" class="avatar"
+                     style="max-height: 50px;"/>
+            {% endif %}
+        </div>
         <ul id="dashboard-menu">
             <li>
                 <a href="{% url 'main:panel' company_slug %}"><i class="icon-home"></i>
                     <span>{{ company.short_name|upper }}</span>
                 </a>
             </li>
-         {% if not request.user|has_group:"Doctor"  %}
-            <li>
-                <a href="{% url 'main:requirements_list' company.slug %}">
-                    <i class="icon-tasks"></i>
-                    <span>Requerimientos</span>
-                </a>
-            </li>
+            {% if not request.user|has_group:"Doctor" %}
+                <li>
+                    <a href="{% url 'main:requirements_list' company.slug %}">
+                        <i class="icon-tasks"></i>
+                        <span>Requerimientos</span>
+                    </a>
+                </li>
 
-            <li>
-                <a href="{% url 'main:workers' company.slug %}">
-                    <i class="icon-group"></i>
-                    <span>Trabajadores</span>
-                </a>
-            </li>
-            <!--<li>
+                <li>
+                    <a class="dropdown-toggle" href="#">
+                        <i class="icon-group"></i>
+                        <span>Personal</span>
+                        <i class="icon-chevron-down"></i>
+                    </a>
+                    <ul class="submenu">
+                        <li>
+                            <a href="{% url 'main:workers' company.slug %}">
+                                <i class=""></i>
+                                <span>Todos</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="new-user.html">
+                                <i class=""></i>
+                                <span>Por mes</span>
+                            </a>
+                        </li>
+
+
+                        <li>
+                            <a href="{% url 'main:accident_list' company.slug %}">
+                                <i class=""></i>
+                                <span>Accidentes</span>
+                            </a>
+                        </li>
+                    </ul>
+
+                </li>
+                <!--<li>
                 <a href="{% url 'main:indices' company.slug %}">
                     <i class="icon-th-large"></i>
                     <span>Indicadores SST</span>
                 </a>
             </li>-->
-            <!--<li>
+                <!--<li>
                 <a href="{% url 'main:requirements_list' company.slug %}">
                     <i class="icon-plus"></i>
                     <span>Otros Indicadores</span>
                 </a>
             </li>-->
-        {% endif %}
+            {% endif %}
             <li>
                 <a href="{% url 'fullcalendar:calendar_list' company.slug %}">
                     <i class="icon-calendar-empty"></i>
                     <span>Programas Anuales</span>
                 </a>
             </li>
-           {% if request.user|has_group:"Doctor" and not request.user.is_superuser %}
+            {% if request.user|has_group:"Doctor" and not request.user.is_superuser %}
                 <li>
                     <a href="{% url 'main:medic_exam' company.slug %}">
                         <i class="icon-heart"></i>
@@ -61,32 +94,26 @@
                 </li>
             {% endif %}
 
-            <li>
-                <a href="{% url 'main:accident_list' company.slug %}">
-                    <i class="icon-warning-sign"></i>
-                    <span>Accidentes</span>
-                </a>
-            </li>
-        {% if not request.user|has_group:"Doctor"  %}
-            <li>
-                <a href="{% url 'acuerdos_sst:meeting_list' company.slug %}">
-                    <i class="icon-comments-alt"></i>
-                    <span>Comite SST</span>
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'main:legal_requirement' company.slug %}">
-                    <i class="icon-edit"></i>
-                    <span>Requisitos Legales</span>
-                </a>
-            </li>
-            <li>
-                <a href="{% url 'main:reports' company.slug %}">
-                    <i class="icon-signal"></i>
-                    <span>Reportes</span>
-                </a>
-            </li>
-        {% endif %}
+            {% if not request.user|has_group:"Doctor" %}
+                <li>
+                    <a href="{% url 'acuerdos_sst:meeting_list' company.slug %}">
+                        <i class="icon-comments-alt"></i>
+                        <span>Comite SST</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'main:legal_requirement' company.slug %}">
+                        <i class="icon-edit"></i>
+                        <span>Requisitos Legales</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'main:reports' company.slug %}">
+                        <i class="icon-signal"></i>
+                        <span>Reportes</span>
+                    </a>
+                </li>
+            {% endif %}
         </ul>
     </div>
 {% endblock %}
