--- a/src/main/templates/main/requirements/list.html
+++ b/src/main/templates/main/requirements/list.html
@@ -8,7 +8,7 @@
     <div class="row header">
         <h3>REQUERIMIENTOS</h3>
         {% if request.user.is_superuser %}
-            <div class="col-md-10 col-sm-12 col-xs-12 pull-right">
+            <div class="col-md-9 col-sm-12 col-xs-12 pull-right">
                 <a href="{% url 'main:requirement_new' company.slug %}" class="btn-flat success pull-right">
                     <span>&#43;</span>
                     Nuevo Requerimiento
@@ -16,7 +16,7 @@
             </div>
         {% endif %}
     </div>
-    <div id="pad-wrapper" class="users-list">
+    <div class="row">
 
         <table class="table table-hover">
             <thead>
@@ -35,9 +35,7 @@
                     <td>{{ requirement.description }}</td>
                     {% if request.user.is_superuser %}
                         <td class="text-left">
-                            <ul>
-                                <li><a href="{% url 'main:requirement_edit' company.slug requirement.pk %}">Editar</a></li>
-                            </ul>
+                        <a href="{% url 'main:requirement_edit' company.slug requirement.pk %}" title="editar" class="btn btn-default"><i class="icon-edit"></i></a>
                         </td>
                     {% endif %}
                 </tr>
