--- a/src/main/static/main/css/lib/select2.css
+++ b/src/main/static/main/css/lib/select2.css
@@ -47,7 +47,8 @@ Version: 3.2 Timestamp: Mon Sep 10 10:38:04 PDT 2012
     overflow: hidden;
     white-space: nowrap;
     position: relative;
-    height: 26px;
+    /*height: 26px;*/
+    height: 34px;
     line-height: 26px;
     padding: 0 0 0 8px;
     color: #444;
