--- a/src/main/templates/main/layout_with_out_nav.html
+++ b/src/main/templates/main/layout_with_out_nav.html
@@ -117,7 +117,7 @@
 <!-- call this page plugins -->
 
 <!-- knob -->
-{% if not calendar and not worker_view and not accident_view and not report_view%}
+{% if not calendar and not accident_view and not report_view%}
 {#    <script src="http://code.jquery.com/jquery-latest.js"></script>#}
     <script src="{% static 'fullcalendar/fullcalendar/lib/jquery.min.js' %}"></script>
     <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
