--- a/src/main/templates/main/workers/list.html
+++ b/src/main/templates/main/workers/list.html
@@ -69,10 +69,10 @@
 {% endblock %}
 
 {% block scripts %}
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{% static 'main/js/bootstrap.min.js' %}"></script>
+{#    <script src="http://code.jquery.com/jquery-latest.js"></script>#}
+{#    <script src="{% static 'main/js/bootstrap.min.js' %}"></script>#}
     <script src="{% static 'main/js/jquery.dataTables.js' %}"></script>
-    <script src="{% static 'main/js/theme.js'%}"></script>
+{#    <script src="{% static 'main/js/theme.js'%}"></script>#}
 
     <script type="text/javascript">
         $(document).ready(function() {
